compiler/testData/diagnostics/tests/inference/builderInference/kt50989.kt
// WITH_STDLIB

fun main() {
    <!TYPE_INFERENCE_NO_INFORMATION_FOR_PARAMETER!>buildList<!> {
        <!DEBUG_INFO_ELEMENT_WITH_ERROR_TYPE, OVERLOAD_RESOLUTION_AMBIGUITY!>println<!>(get(0))
    }
}